# pyo3_example

call_python_inside_rust/: Cargo.toml  build.rs  functions.py  functions_venv.py  pyo3-build-config.txt  requirements.txt  run.sh  setup.sh
call_python_inside_rust/examples/: loop7c.rs  loop7d.rs
call_python_inside_rust/py/: functions.py  functions_venv.py  sample.py
call_python_inside_rust/src/: main.rs
call_python_inside_rust/src/lib/: lib.rs
polly_demo/: Cargo.toml  requirements.txt
polly_demo/py/: polly.py
polly_demo/scripts/: install_awscli.sh  run.sh  setup_env.sh
polly_demo/src/: main.rs
