[package]
name = "call_python_inside_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.pyo3]
version = "0.18.0"

[dependencies.pyo3-build-config]
version = "0.18.0"

[build-dependencies.pyo3-build-config]
version = "0.18.0"
features = ["resolve-config"]
