[package]
name = "call_python_inside_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "call_python_inside_rust"
path = "src/main.rs"


[lib]
name = "examples"
path = "src/lib/lib.rs"

[dependencies]

[dependencies.pyo3]
version = "0.18.0"
features = ["auto-initialize"]